<resources>
    <string name="app_name">کتاب</string>
    <string name="contents_btn_txt">فهرست</string>
    <string name="search_btn_txt">جستجو</string>
    <string name="bookmarks_btn_txt">علاقمندی ها</string>
    <string name="go_back_toolbar_text">بازگشت</string>
    <string name="chapter_toolbar_txt_append">فصل :</string>
    <string name="next_page_btn_txt"> بعدی</string>
    <string name="prev_page_btn_txt"> قبلی</string>
    <string name="pageOf">صفحه</string>
    <string name="from">از</string>
    <string name="search_in_titles_rd">در عناوین</string>
    <string name="search_in_text_rd">در متن</string>
    <string name="magic_row_title_text">فصل</string>
    <string name="magic_row_section_text">بخش</string>
    <string name="search_toolbar_title">جستجو</string>
    <string name="favorites_toolbar_text">علاقمندی ها</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sample_text_tv">این یک متن نمونه برای نمایش تغییرات است این یک متن نمونه برای نمایش تغییرات است این یک متن نمونه برای نمایش تغییرات است</string>
    <string name="select_font_tv_txt">انتخاب فونت :</string>
    <string name="font_size_tv">اندازه فونت</string>
    <string name="light_mode_tv">تنظیمات نور صفحه</string>
    <string name="rb_day_text">َروز</string>
    <string name="rb_night_mode">شب</string>
    <string name="line_space_tv">فاصله خطوط</string>
    <string name="apply_settings_btn_txt">اعمال تغییرات</string>
    <string name="decline_btn_txt">انصراف</string>
    <string name="settings_btn_txt">تنظیمات</string>
    <string name="dialogue_question_txt">آیا مطمئن هستید؟</string>
    <string name="yes_dialog_txt">بلی</string>
    <string name="no_dialog_txt">خیر</string>
    <array name="fonts">
        <item>Ordibehesht_shablon</item>
        <item>adobe_arabic_shin</item>
        <item>Khandevane</item>
        <item>Lalezar-Regular</item>
    </array>
</resources>
