<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list"
    tools:context=".Settings">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/sample_text_tv"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_frame"
            android:gravity="center"
            android:text="@string/sample_text_tv"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/select_font_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sample_text_tv"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/select_font_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:text="@string/select_font_tv_txt"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/fonts_spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="2"
                android:entries="@array/fonts" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/font_size_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_font_linear"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/font_size_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:text="@string/font_size_tv"
                android:textStyle="bold" />

            <SeekBar
                android:id="@+id/fonts_seekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:max="40"
                android:progress="17" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/light_mode_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/font_size_linear"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/light_mode_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/light_mode_tv"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_light_mode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_day_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/rb_day_text" />

                <RadioButton
                    android:id="@+id/rb_night_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_night_mode" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/line_space_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/light_mode_linear"
            android:layout_margin="5dp"
            android:background="@drawable/edittext_frame"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/line_space_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/line_space_tv" />

            <SeekBar
                android:id="@+id/line_space_sb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:max="30"
                android:progress="10" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line_space_linear"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_frame"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/apply_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/apply_settings_btn_txt" />

            <Button
                android:id="@+id/cancel_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/decline_btn_txt" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
