<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:background="@drawable/gradient_list"
    tools:context=".Search">
    <include layout="@layout/toolbar"
        android:id="@+id/search_toolbar"/>

    <LinearLayout
        android:id="@+id/search_field"
        android:layout_below="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:background="@drawable/edittext_frame"
        >
        <EditText
            android:id="@+id/search_ed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:inputType="text"
            android:textColor="#fff"
            android:layout_weight="5"/>
        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/search"/>
    </LinearLayout>
    <RadioGroup
        android:background="@drawable/edittext_frame"
        android:id="@+id/radio_group"
        android:layout_below="@+id/search_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <RadioButton
            android:id="@+id/in_titles_rd"
            android:text="@string/search_in_titles_rd"
            android:checked="true"
            android:textColor="#fff"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioButton
            android:id="@+id/in_text_rd"
            android:textColor="#fff"
            android:text="@string/search_in_text_rd"
            android:textSize="17sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RadioGroup>
    <LinearLayout
        android:visibility="gone"
        android:id="@+id/magic_row"
        android:layout_below="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="horizontal">
        <TextView
            android:text="@string/magic_row_title_text"
            android:textSize="20sp"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:textColor="#fff"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <TextView
            android:text="@string/magic_row_section_text"
            android:textSize="20sp"
            android:textColor="#fff"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_weight="1"/>

    </LinearLayout>
    <ListView
        android:id="@+id/search_result_lv"
        android:layout_below="@+id/magic_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>
</RelativeLayout>