<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/gradient_list"
    android:id="@+id/main_act"
    android:layoutDirection="rtl"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/contents_btn"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button">
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/contents"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:padding="5dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/contents_btn_txt"
            android:textSize="26sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_below="@+id/contents_btn"
        android:id="@+id/search_btn"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button">
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/search_engine"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:padding="5dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/search_btn_txt"
            android:textSize="26sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/bookmark_btn"
        android:layout_below="@+id/search_btn"
        android:layout_centerHorizontal="true"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_button">
        <ImageView
            android:layout_width="0dp"
            android:src="@drawable/favorites"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:layout_margin="4dp"
            android:padding="5dp"
            android:textColor="#fff"
            android:textStyle="bold"
            android:text="@string/bookmarks_btn_txt"
            android:textSize="26sp"
            />
    </LinearLayout>


</RelativeLayout>